// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strict_array test_referenced_strict_array_with_non_object_item 1`] = `
Object {
  "json": Object {
    "array": Array [
      0,
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "link": Array [
      0,
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": Object {
    "link": Array [
      0,
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
  },
}
`;

exports[`strict_array test_referenced_strict_array_with_non_resolvable_item 1`] = `
Object {
  "json": Object {
    "array": Array [
      Object {
        "type": "entity_with_complex_property",
      },
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "link": Array [
      Object {
        "type": "entity_with_complex_property",
      },
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": Object {
    "link": Array [
      Object {
        "type": "entity_with_complex_property",
      },
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
  },
}
`;

exports[`strict_array test_strict_array_happy_case 1`] = `
Object {
  "json": Object {
    "array": Array [
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": Object {},
}
`;

exports[`strict_array test_strict_array_happy_case 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`strict_array test_strict_array_happy_case_referenced 1`] = `
Object {
  "json": Object {
    "array": Array [
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "link": Array [
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": Object {
    "link": Array [
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
  },
}
`;

exports[`strict_array test_strict_array_with_non_object_item 1`] = `
Object {
  "json": Object {
    "array": Array [
      0,
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": Object {},
}
`;

exports[`strict_array test_strict_array_with_non_object_item 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`strict_array test_strict_array_with_non_object_item_ref 1`] = `
Object {
  "json": Object {
    "array": Array [
      0,
      Object {
        "link": "https://ya.ru",
        "type": "t_0",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": Object {},
}
`;

exports[`strict_array test_strict_array_with_non_object_item_ref 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`strict_array test_strict_array_with_non_resolvable_item 1`] = `
Object {
  "json": Object {
    "array": Array [
      Object {
        "type": "entity_with_complex_property",
      },
      Object {
        "property": Object {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": Object {},
}
`;

exports[`strict_array test_strict_array_with_non_resolvable_item 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`strict_array test_strict_array_with_non_resolvable_item_ref 1`] = `
Object {
  "json": Object {
    "array": Array [
      Object {
        "type": "t_0",
      },
      Object {
        "link": "https://ya.ru",
        "type": "t_0",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": Object {},
}
`;

exports[`strict_array test_strict_array_with_non_resolvable_item_ref 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;
